[gd_scene load_steps=37 format=3 uid="uid://lybotj3vh6v7"]

[ext_resource type="Script" path="res://enemy/smallslime.gd" id="1_d41hx"]
[ext_resource type="Texture2D" uid="uid://dddn3pqo5ersh" path="res://enemy/SmallSlime.png" id="2_7v1db"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qb0lt"]
size = Vector2(39, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_glkje"]
atlas = ExtResource("2_7v1db")
region = Rect2(0, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_fqkch"]
atlas = ExtResource("2_7v1db")
region = Rect2(32, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_ifl38"]
atlas = ExtResource("2_7v1db")
region = Rect2(64, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_h13hi"]
atlas = ExtResource("2_7v1db")
region = Rect2(96, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_gpma1"]
atlas = ExtResource("2_7v1db")
region = Rect2(128, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_d0if6"]
atlas = ExtResource("2_7v1db")
region = Rect2(160, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_4vulu"]
atlas = ExtResource("2_7v1db")
region = Rect2(192, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_wxn33"]
atlas = ExtResource("2_7v1db")
region = Rect2(224, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_mffql"]
atlas = ExtResource("2_7v1db")
region = Rect2(256, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_5rgog"]
atlas = ExtResource("2_7v1db")
region = Rect2(288, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_6lpeg"]
atlas = ExtResource("2_7v1db")
region = Rect2(320, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_oq8vk"]
atlas = ExtResource("2_7v1db")
region = Rect2(352, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_nmytj"]
atlas = ExtResource("2_7v1db")
region = Rect2(0, 34, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_inxur"]
atlas = ExtResource("2_7v1db")
region = Rect2(32, 34, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_fw4a8"]
atlas = ExtResource("2_7v1db")
region = Rect2(64, 34, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_5mues"]
atlas = ExtResource("2_7v1db")
region = Rect2(96, 34, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_gnl6c"]
atlas = ExtResource("2_7v1db")
region = Rect2(128, 34, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_gji5a"]
atlas = ExtResource("2_7v1db")
region = Rect2(160, 34, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_ig0hk"]
atlas = ExtResource("2_7v1db")
region = Rect2(192, 34, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_toi60"]
atlas = ExtResource("2_7v1db")
region = Rect2(224, 34, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_x420b"]
atlas = ExtResource("2_7v1db")
region = Rect2(0, 102, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_1bj1s"]
atlas = ExtResource("2_7v1db")
region = Rect2(32, 102, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_0jhkq"]
atlas = ExtResource("2_7v1db")
region = Rect2(0, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_1hccb"]
atlas = ExtResource("2_7v1db")
region = Rect2(32, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_obb1w"]
atlas = ExtResource("2_7v1db")
region = Rect2(0, 68, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_x288u"]
atlas = ExtResource("2_7v1db")
region = Rect2(32, 68, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_kf6sh"]
atlas = ExtResource("2_7v1db")
region = Rect2(64, 68, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_1krhj"]
atlas = ExtResource("2_7v1db")
region = Rect2(96, 68, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_eow5u"]
atlas = ExtResource("2_7v1db")
region = Rect2(128, 68, 32, 34)

[sub_resource type="SpriteFrames" id="SpriteFrames_o17jh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_glkje")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fqkch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ifl38")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h13hi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gpma1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d0if6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4vulu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wxn33")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mffql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5rgog")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6lpeg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oq8vk")
}],
"loop": false,
"name": &"attack_basic",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nmytj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_inxur")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fw4a8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mues")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gnl6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gji5a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ig0hk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_toi60")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x420b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bj1s")
}],
"loop": false,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0jhkq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1hccb")
}],
"loop": true,
"name": &"idle",
"speed": 1.5
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_obb1w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x288u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kf6sh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1krhj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eow5u")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_qfdxx"]
radius = 266.002

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v7847"]
size = Vector2(34, 36)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8v4sy"]
bg_color = Color(0.501961, 0.141176, 0.6, 1)

[node name="small slime" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 4
script = ExtResource("1_d41hx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_qb0lt")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0.499999, 1.07288e-06)
scale = Vector2(2.17188, 2.03125)
sprite_frames = SubResource("SpriteFrames_o17jh")
animation = &"attack_basic"
autoplay = "idle"
metadata/_edit_lock_ = true

[node name="Area2D (detection)" type="Area2D" parent="."]
collision_layer = 7
collision_mask = 7
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D (detection)"]
shape = SubResource("CircleShape2D_qfdxx")
metadata/_edit_lock_ = true

[node name="Area2D (strike)" type="Area2D" parent="."]
collision_layer = 7
collision_mask = 7
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D (strike)"]
position = Vector2(-7, 2)
shape = SubResource("RectangleShape2D_v7847")
metadata/_edit_lock_ = true

[node name="SmallSlimeBar" type="ProgressBar" parent="."]
offset_left = -61.0
offset_top = -70.0
offset_right = 62.0
offset_bottom = -43.0
theme_override_styles/background = SubResource("StyleBoxFlat_8v4sy")
max_value = 20.0
value = 20.0

[connection signal="body_entered" from="Area2D (detection)" to="." method="_on_area_2d_player_detection_body_entered"]
[connection signal="body_exited" from="Area2D (detection)" to="." method="_on_area_2d_player_detection_body_exited"]
[connection signal="body_entered" from="Area2D (strike)" to="." method="_on_area_2d_strike_body_entered"]
[connection signal="body_exited" from="Area2D (strike)" to="." method="_on_area_2d_strike_body_exited"]
